2010-03-06  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (render) Returns status instead of file name; image and midi
	  file name are stored inside class properties.
	* wp-scorerender.php:
	- (scorerender_return_fragment_ok) Eliminate unnecessary argument.

2010-03-05  Abel Cheung  <abelcheung@gmail.com>

	* misc/jquery.copyable.js:
	- Also fix calling of jQuery for IE (fix for other browsers
	  is already done upon first import)
	* wp-scorerender.php:
	- Fix shortcode being re-evaluated inside output.

2010-03-04  Abel Cheung  <abelcheung@gmail.com>

	* Update ZeroClipboard to newest version (1.0.6).
	* Incorporate jquery.copyable, which transforms ZeroClipboard
	  into jQuery plugin.
	* wp-scorerender.php:
	- Instead of showing music source through showcode.php, now
	  ZeroClipboard flash is directly overlayed onto image.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* Replace jQuery Color Picker with jscolor, which use less
	  resource and (more important) is more responsive.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Prints HTTP response code upon error, and appropriate header
	  for better caching.
	   
2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Re-add is_notation_usable() to interface.
	* scorerender-utils.php (transform_paths):
	- Handle the case when setting is a MIDI program.
	
2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (search_path) Removed, functionality merged into search_prog().
	- (search_prog) New func, also searches user specified paths.
	* wp-scorerender.php (scorerender_get_def_settings),
	  scorerender-class.php (define_setting_value),
	  notation/lilypond.php (define_setting_value):
	- Use search_prog() globally.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, wp-scorerender.php:
	- Use WP hook and static methods to register notation data
	  instead of adding directly to global variable.